add openapi operation names
