# backend/src/main/java/com/prodyna/mifune/api/ApocalypseResource.java
@@ -1,59 +1,0 @@
-package com.prodyna.mifune.api;
-
-/*-
- * #%L
- * prodyna-mifune-parent
- * %%
- * Copyright (C) 2021 - 2023 PRODYNA SE
- * %%
- * Permission is hereby granted, free of charge, to any person obtaining a copy
- * of this software and associated documentation files (the "Software"), to deal
- * in the Software without restriction, including without limitation the rights
- * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
- * copies of the Software, and to permit persons to whom the Software is
- * furnished to do so, subject to the following conditions:
- *
- * The above copyright notice and this permission notice shall be included in
- * all copies or substantial portions of the Software.
- *
- * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
- * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
- * THE SOFTWARE.
- * #L%
- */
-
-import com.prodyna.mifune.core.data.ApocalypseService;
-import io.smallrye.mutiny.Multi;
-import jakarta.ws.rs.*;
-import jakarta.ws.rs.core.MediaType;
-import org.eclipse.microprofile.openapi.annotations.Operation;
-import org.eclipse.microprofile.openapi.annotations.tags.Tag;
-
-@Path("/api/apocalypse")
-@Tag(name = "admin")
-@Consumes(MediaType.APPLICATION_JSON)
-@Produces(MediaType.APPLICATION_JSON)
-public class ApocalypseResource {
-
-  private final ApocalypseService apocalypseService;
-
-  public ApocalypseResource(ApocalypseService apocalypseService) {
-    this.apocalypseService = apocalypseService;
-  }
-
-  @GET
-  @Operation(
-      summary = "Reset the whole database",
-      description =
-          """
-			Remove all nodes and relation and delete each constraint and index
-			""")
-  @Produces(MediaType.SERVER_SENT_EVENTS)
-  public Multi<String> apocalypseNow() {
-    return apocalypseService.clearDatabase();
-  }
-}
